[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devflow"
version = "0.1.0"
description = "LangGraph-based development-workflow orchestrator (dry-run scaffold)"
readme = "README.md"
requires-python = ">=3.8"
# No runtime third-party deps: the default path is pure stdlib (the fallback runner).
dependencies = []

[project.optional-dependencies]
# the real LangGraph backend (+ durable sqlite checkpointer for cross-process pause/resume)
langgraph = ["langgraph>=0.2,<0.4", "langgraph-checkpoint-sqlite>=2.0"]
# the above plus LangGraph Studio (`langgraph dev`)
studio = ["langgraph>=0.2,<0.4", "langgraph-checkpoint-sqlite>=2.0", "langgraph-cli[inmem]>=0.1.55"]

[tool.setuptools]
packages = ["devflow", "devflow.nodes", "devflow.tools"]
